--- a/src/styles/DefaultLayout.css
+++ b/src/styles/DefaultLayout.css
@@ -1,9 +1,18 @@
 .logo {
   float: left;
-  width: 120px;
+  width: 150px;
   height: 31px;
-  margin: 16px 30px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
+  margin: 16px 26px 16px -26px;
+  position: relative;
+}
+
+.logo span {
+  position: absolute;
+  font-size: 17.5px;
+  top: -15px;
+  left: 1px;
+  font-weight: 900;
+  color: #fff;
 }
 
 .site-layout-background {
