--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -1,12 +1,8 @@
 .loading-page-background {
-	background-image: linear-gradient(120deg, #2E61D5, #214298);
+	background-color: white;
 }
 
 .loading-page-content {
-	background-color: #fff;
-	border-radius: 4px;
 	margin-top: 250px;
-	height: 24em;
-	width: 20em;
 	padding: 125px;
 }
